@@ -1,3 +1,15 @@
+2022-02-15  Jonathan Bedard  <jbedard@apple.com>
+
+        [EWS] Support PRs when sending layout test failure emails
+        https://bugs.webkit.org/show_bug.cgi?id=236654
+        <rdar://problem/88974170>
+
+        Reviewed by Aakash Jain.
+
+        * CISupport/ews-build/steps.py:
+        (AnalyzeLayoutTestsResults.send_email_for_new_test_failures): Draft different
+        email for failed patch than failed pull request build.
+
 2022-02-16  Don Olmstead  <don.olmstead@sony.com>
 
         Share WebKitTestRunner code among USE(LIBWPE) ports
